--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "autoprefixer": "^10.4.15",
+    "country-code-lookup": "^0.1.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.3"
   },
