--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "@mui/material": "^5.14.5",
     "autoprefixer": "^10.4.15",
     "country-code-lookup": "^0.1.0",
+    "country-list": "^2.3.0",
+    "flag-icons": "^6.11.0",
+    "node-emoji": "^2.1.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
+    "react-icons": "^4.10.1",
     "recharts": "^2.7.3"
   },
   "devDependencies": {
+    "@types/country-list": "^2.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
